--- a/build.gradle
+++ b/build.gradle
@@ -61,3 +61,10 @@ processResources
         exclude 'mcmod.info'
     }
 }
+
+jar {
+    manifest {
+        attributes 'FMLCorePlugin': 'com.austinv11.customnpctweaks.CustomNPCTransformerPlugin',
+                'FMLCorePluginContainsFMLMod': true
+    }
+}
